Fix a bug that the layout is broken in Obsidian v0.15.4 (#75)

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    padding-left: 10px;
 }
 
 .another-quick-switcher__phantom_item {
